tests/generated/WhiteboxParser.ts
// Generated from tests/Whitebox.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export class WhiteboxParser extends antlr.Parser {
    public static readonly LOREM = 1;
    public static readonly IPSUM = 2;
    public static readonly DOLOR = 3;
    public static readonly SIT = 4;
    public static readonly AMET = 5;
    public static readonly CONSECTETUR = 6;
    public static readonly ADIPISCING = 7;
    public static readonly WS = 8;
    public static readonly RULE_test1 = 0;
    public static readonly RULE_rule1 = 1;
    public static readonly RULE_rule2 = 2;
    public static readonly RULE_rule3 = 3;
    public static readonly RULE_rule4 = 4;
    public static readonly RULE_rule5 = 5;
    public static readonly RULE_test2 = 6;
    public static readonly RULE_rule7 = 7;
    public static readonly RULE_rule8 = 8;
    public static readonly RULE_rule9 = 9;
    public static readonly RULE_rule10 = 10;
    public static readonly RULE_rule11 = 11;
    public static readonly RULE_test3 = 12;
    public static readonly RULE_rule13 = 13;
    public static readonly RULE_test4 = 14;
    public static readonly RULE_rule15 = 15;
    public static readonly RULE_rule16 = 16;
    public static readonly RULE_test5 = 17;
    public static readonly RULE_rule18 = 18;
    public static readonly RULE_rule19 = 19;
    public static readonly RULE_test6 = 20;
    public static readonly RULE_rule21 = 21;
    public static readonly RULE_rule22 = 22;
    public static readonly RULE_test7 = 23;
    public static readonly RULE_test8 = 24;

    public static readonly literalNames = [
        null, "'LOREM'", "'IPSUM'", "'DOLOR'", "'SIT'", "'AMET'", "'CONSECTETUR'",
        "'ADIPISCING'"
    ];

    public static readonly symbolicNames = [
        null, "LOREM", "IPSUM", "DOLOR", "SIT", "AMET", "CONSECTETUR", "ADIPISCING",
        "WS"
    ];
    public static readonly ruleNames = [
        "test1", "rule1", "rule2", "rule3", "rule4", "rule5", "test2", "rule7",
        "rule8", "rule9", "rule10", "rule11", "test3", "rule13", "test4",
        "rule15", "rule16", "test5", "rule18", "rule19", "test6", "rule21",
        "rule22", "test7", "test8",
    ];

    public get grammarFileName(): string { return "Whitebox.g4"; }
    public get literalNames(): (string | null)[] { return WhiteboxParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return WhiteboxParser.symbolicNames; }
    public get ruleNames(): string[] { return WhiteboxParser.ruleNames; }
    public get serializedATN(): number[] { return WhiteboxParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this._interp = new antlr.ParserATNSimulator(this, WhiteboxParser._ATN, WhiteboxParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public test1(): Test1Context {
        let localctx: Test1Context = new Test1Context(this, this._ctx, this.state);
        this.enterRule(localctx, 0, WhiteboxParser.RULE_test1);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 50;
                this.rule1();
                this.state = 51;
                this.match(WhiteboxParser.ADIPISCING);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule1(): Rule1Context {
        let localctx: Rule1Context = new Rule1Context(this, this._ctx, this.state);
        this.enterRule(localctx, 2, WhiteboxParser.RULE_rule1);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 53;
                this.rule2();
                this.state = 54;
                this.match(WhiteboxParser.CONSECTETUR);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule2(): Rule2Context {
        let localctx: Rule2Context = new Rule2Context(this, this._ctx, this.state);
        this.enterRule(localctx, 4, WhiteboxParser.RULE_rule2);
        let _la: number;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 56;
                this.match(WhiteboxParser.LOREM);
                this.state = 57;
                this.rule3();
                this.state = 58;
                this.rule5();
                this.state = 62;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === 4) {
                    {
                        {
                            this.state = 59;
                            this.match(WhiteboxParser.SIT);
                        }
                    }
                    this.state = 64;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 66;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 5) {
                    {
                        this.state = 65;
                        this.match(WhiteboxParser.AMET);
                    }
                }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule3(): Rule3Context {
        let localctx: Rule3Context = new Rule3Context(this, this._ctx, this.state);
        this.enterRule(localctx, 6, WhiteboxParser.RULE_rule3);
        let _la: number;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 68;
                this.rule4();
                this.state = 70;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 3) {
                    {
                        this.state = 69;
                        this.match(WhiteboxParser.DOLOR);
                    }
                }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule4(): Rule4Context {
        let localctx: Rule4Context = new Rule4Context(this, this._ctx, this.state);
        this.enterRule(localctx, 8, WhiteboxParser.RULE_rule4);
        let _la: number;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 73;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 2) {
                    {
                        this.state = 72;
                        this.match(WhiteboxParser.IPSUM);
                    }
                }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule5(): Rule5Context {
        let localctx: Rule5Context = new Rule5Context(this, this._ctx, this.state);
        this.enterRule(localctx, 10, WhiteboxParser.RULE_rule5);
        try {
            this.enterOuterAlt(localctx, 1);
            // tslint:disable-next-line:no-empty
            {
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public test2(): Test2Context {
        let localctx: Test2Context = new Test2Context(this, this._ctx, this.state);
        this.enterRule(localctx, 12, WhiteboxParser.RULE_test2);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 77;
                this.rule7();
                this.state = 78;
                this.match(WhiteboxParser.ADIPISCING);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule7(): Rule7Context {
        let localctx: Rule7Context = new Rule7Context(this, this._ctx, this.state);
        this.enterRule(localctx, 14, WhiteboxParser.RULE_rule7);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 80;
                this.rule8();
                this.state = 81;
                this.match(WhiteboxParser.CONSECTETUR);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule8(): Rule8Context {
        let localctx: Rule8Context = new Rule8Context(this, this._ctx, this.state);
        this.enterRule(localctx, 16, WhiteboxParser.RULE_rule8);
        let _la: number;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 83;
                this.match(WhiteboxParser.LOREM);
                this.state = 84;
                this.rule11();
                this.state = 85;
                this.rule9();
                this.state = 89;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === 4) {
                    {
                        {
                            this.state = 86;
                            this.match(WhiteboxParser.SIT);
                        }
                    }
                    this.state = 91;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 93;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 5) {
                    {
                        this.state = 92;
                        this.match(WhiteboxParser.AMET);
                    }
                }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule9(): Rule9Context {
        let localctx: Rule9Context = new Rule9Context(this, this._ctx, this.state);
        this.enterRule(localctx, 18, WhiteboxParser.RULE_rule9);
        let _la: number;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 95;
                this.rule10();
                this.state = 97;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 3) {
                    {
                        this.state = 96;
                        this.match(WhiteboxParser.DOLOR);
                    }
                }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule10(): Rule10Context {
        let localctx: Rule10Context = new Rule10Context(this, this._ctx, this.state);
        this.enterRule(localctx, 20, WhiteboxParser.RULE_rule10);
        let _la: number;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 100;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 2) {
                    {
                        this.state = 99;
                        this.match(WhiteboxParser.IPSUM);
                    }
                }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule11(): Rule11Context {
        let localctx: Rule11Context = new Rule11Context(this, this._ctx, this.state);
        this.enterRule(localctx, 22, WhiteboxParser.RULE_rule11);
        try {
            this.enterOuterAlt(localctx, 1);
            // tslint:disable-next-line:no-empty
            {
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public test3(): Test3Context {
        let localctx: Test3Context = new Test3Context(this, this._ctx, this.state);
        this.enterRule(localctx, 24, WhiteboxParser.RULE_test3);
        let _la: number;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 104;
                this.match(WhiteboxParser.LOREM);
                this.state = 106;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 2) {
                    {
                        this.state = 105;
                        this.match(WhiteboxParser.IPSUM);
                    }
                }

                this.state = 108;
                this.rule13();
                this.state = 110;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                do {
                    {
                        {
                            this.state = 109;
                            this.match(WhiteboxParser.AMET);
                        }
                    }
                    this.state = 112;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                } while (_la === 5);
                this.state = 114;
                this.match(WhiteboxParser.CONSECTETUR);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule13(): Rule13Context {
        let localctx: Rule13Context = new Rule13Context(this, this._ctx, this.state);
        this.enterRule(localctx, 26, WhiteboxParser.RULE_rule13);
        let _la: number;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 119;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === 3 || _la === 4) {
                    {
                        {
                            this.state = 116;
                            _la = this._input.LA(1);
                            if (!(_la === 3 || _la === 4)) {
                                this._errHandler.recoverInline(this);
                            }
                            else {
                                this._errHandler.reportMatch(this);
                                this.consume();
                            }
                        }
                    }
                    this.state = 121;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public test4(): Test4Context {
        let localctx: Test4Context = new Test4Context(this, this._ctx, this.state);
        this.enterRule(localctx, 28, WhiteboxParser.RULE_test4);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 122;
                this.match(WhiteboxParser.LOREM);
                this.state = 125;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 11, this._ctx)) {
                    case 1:
                        {
                            this.state = 123;
                            this.rule15();
                        }
                        break;
                    case 2:
                        {
                            this.state = 124;
                            this.rule16();
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule15(): Rule15Context {
        let localctx: Rule15Context = new Rule15Context(this, this._ctx, this.state);
        this.enterRule(localctx, 30, WhiteboxParser.RULE_rule15);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 127;
                this.match(WhiteboxParser.IPSUM);
                this.state = 128;
                this.match(WhiteboxParser.DOLOR);
                this.state = 129;
                this.match(WhiteboxParser.SIT);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule16(): Rule16Context {
        let localctx: Rule16Context = new Rule16Context(this, this._ctx, this.state);
        this.enterRule(localctx, 32, WhiteboxParser.RULE_rule16);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 131;
                this.match(WhiteboxParser.IPSUM);
                this.state = 132;
                this.match(WhiteboxParser.DOLOR);
                this.state = 133;
                this.match(WhiteboxParser.AMET);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public test5(): Test5Context {
        let localctx: Test5Context = new Test5Context(this, this._ctx, this.state);
        this.enterRule(localctx, 34, WhiteboxParser.RULE_test5);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 135;
                this.match(WhiteboxParser.LOREM);
                this.state = 138;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 12, this._ctx)) {
                    case 1:
                        {
                            this.state = 136;
                            this.rule15();
                        }
                        break;
                    case 2:
                        {
                            this.state = 137;
                            this.rule16();
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule18(): Rule18Context {
        let localctx: Rule18Context = new Rule18Context(this, this._ctx, this.state);
        this.enterRule(localctx, 36, WhiteboxParser.RULE_rule18);
        let _la: number;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 140;
                this.match(WhiteboxParser.IPSUM);
                this.state = 141;
                this.match(WhiteboxParser.DOLOR);
                this.state = 142;
                _la = this._input.LA(1);
                if (!(_la === 4 || _la === 6)) {
                    this._errHandler.recoverInline(this);
                }
                else {
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule19(): Rule19Context {
        let localctx: Rule19Context = new Rule19Context(this, this._ctx, this.state);
        this.enterRule(localctx, 38, WhiteboxParser.RULE_rule19);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 144;
                this.match(WhiteboxParser.IPSUM);
                this.state = 145;
                this.match(WhiteboxParser.DOLOR);
                this.state = 146;
                this.match(WhiteboxParser.AMET);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public test6(): Test6Context {
        let localctx: Test6Context = new Test6Context(this, this._ctx, this.state);
        this.enterRule(localctx, 40, WhiteboxParser.RULE_test6);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 148;
                this.match(WhiteboxParser.LOREM);
                this.state = 151;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 13, this._ctx)) {
                    case 1:
                        {
                            this.state = 149;
                            this.rule15();
                        }
                        break;
                    case 2:
                        {
                            this.state = 150;
                            this.rule16();
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule21(): Rule21Context {
        let localctx: Rule21Context = new Rule21Context(this, this._ctx, this.state);
        this.enterRule(localctx, 42, WhiteboxParser.RULE_rule21);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 153;
                this.match(WhiteboxParser.IPSUM);
                this.state = 154;
                this.match(WhiteboxParser.DOLOR);
                this.state = 155;
                this.match(WhiteboxParser.SIT);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public rule22(): Rule22Context {
        let localctx: Rule22Context = new Rule22Context(this, this._ctx, this.state);
        this.enterRule(localctx, 44, WhiteboxParser.RULE_rule22);
        let _la: number;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 157;
                this.match(WhiteboxParser.IPSUM);
                this.state = 158;
                this.match(WhiteboxParser.DOLOR);
                this.state = 159;
                _la = this._input.LA(1);
                if (!(_la === 5 || _la === 6)) {
                    this._errHandler.recoverInline(this);
                }
                else {
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public test7(): Test7Context {
        let localctx: Test7Context = new Test7Context(this, this._ctx, this.state);
        this.enterRule(localctx, 46, WhiteboxParser.RULE_test7);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 161;
                this.match(WhiteboxParser.LOREM);
                this.state = 168;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 14, this._ctx)) {
                    case 1:
                        {
                            this.state = 162;
                            this.match(WhiteboxParser.IPSUM);
                            this.state = 163;
                            this.match(WhiteboxParser.DOLOR);
                            this.state = 164;
                            this.match(WhiteboxParser.SIT);
                        }
                        break;
                    case 2:
                        {
                            this.state = 165;
                            this.match(WhiteboxParser.IPSUM);
                            this.state = 166;
                            this.match(WhiteboxParser.DOLOR);
                            this.state = 167;
                            this.match(WhiteboxParser.AMET);
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    public test8(): Test8Context {
        let localctx: Test8Context = new Test8Context(this, this._ctx, this.state);
        this.enterRule(localctx, 48, WhiteboxParser.RULE_test8);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 170;
                this.match(WhiteboxParser.LOREM);
                this.state = 179;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 15, this._ctx)) {
                    case 1:
                        {
                            this.state = 171;
                            this.match(WhiteboxParser.IPSUM);
                            this.state = 172;
                            this.match(WhiteboxParser.DOLOR);
                            this.state = 173;
                            this.match(WhiteboxParser.SIT);
                            this.state = 174;
                            this.match(WhiteboxParser.AMET);
                        }
                        break;
                    case 2:
                        {
                            this.state = 175;
                            this.match(WhiteboxParser.IPSUM);
                            this.state = 176;
                            this.match(WhiteboxParser.DOLOR);
                            this.state = 177;
                            this.match(WhiteboxParser.SIT);
                            this.state = 178;
                            this.match(WhiteboxParser.CONSECTETUR);
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!WhiteboxParser.__ATN) {
            WhiteboxParser.__ATN = new antlr.ATNDeserializer().deserialize(WhiteboxParser._serializedATN);
        }

        return WhiteboxParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(WhiteboxParser.literalNames, WhiteboxParser.symbolicNames, []);

    public override getVocabulary(): antlr.Vocabulary {
        return WhiteboxParser.vocabulary;
    }

    private static readonly decisionsToDFA = WhiteboxParser._ATN.decisionToState.map((ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index));
}

export class Test1Context extends antlr.ParserRuleContext {
    constructor(parser?: WhiteboxParser, parent?: antlr.ParserRuleContext, invokingState?: number) {
        super(parent, invokingState);
        this.parser = parser;
    }
    public rule1(): Rule1Context {
        return this.getTypedRuleContext(Rule1Context, 0);
    }
    public ADIPISCING(): antlr.TerminalNode {
        return this.getToken(WhiteboxParser.ADIPISCING, 0);
    }
    public override get ruleIndex(): number {
        return WhiteboxParser.RULE_test1;
    }
}


export class Rule1Context extends antlr.ParserRuleContext {
    constructor(parser?: WhiteboxParser, parent?: antlr.ParserRuleContext, invokingState?: number) {
        super(parent, invokingState);
        this.parser = parser;
    }
    public rule2(): Rule2Context {
        return this.getTypedRuleContext(Rule2Context, 0);
    }
    public CONSECTETUR(): antlr.TerminalNode {
        return this.getToken(WhiteboxParser.CONSECTETUR, 0);
    }
    public override get ruleIndex(): number {
        return WhiteboxParser.RULE_rule1;
    }
}


export class Rule2Context extends antlr.ParserRuleContext {
    constructor(parser?: WhiteboxParser, parent?: antlr.ParserRuleContext, invokingState?: number) {
        super(parent, invokingState);
        this.parser = parser;
    }
    public LOREM(): antlr.TerminalNode {
        return this.getToken(WhiteboxParser.LOREM, 0);
    }
    public rule3(): Rule3Context {
        return this.getTypedRuleContext(Rule3Context, 0);
    }
    public rule5(): Rule5Context {
        return this.getTypedRuleContext(Rule5Context, 0);
    }
    public SIT__list(): antlr.TerminalNode[] {
        return this.getTokens(WhiteboxParser.SIT);
    }
    public SIT(i: number): antlr.TerminalNode {
        return this.getToken(WhiteboxParser.SIT, i);
    }
    public AMET(): antlr.TerminalNode {
        return this.getToken(WhiteboxParser.AMET, 0);
    }
    public override get ruleIndex(): number {
        return WhiteboxParser.RULE_rule2;
    }
}


export class Rule3Context extends antlr.ParserRuleContext {
    constructor(parser?: WhiteboxParser, parent?: antlr.ParserRuleContext, invokingState?: number) {
        super(parent, invokingState);
        this.parser = parser;
    }
    public rule4(): Rule4Context {
        return this.getTypedRuleContext(Rule4Context, 0);
    }
    public DOLOR(): antlr.TerminalNode {
        return this.getToken(WhiteboxParser.DOLOR, 0);
    }
    public override get ruleIndex(): number {
        return WhiteboxParser.RULE_rule3;
    }
}


export class Rule4Context extends antlr.ParserRuleContext {
    constructor(parser?: WhiteboxParser, parent?: antlr.ParserRuleContext, invokingState?: number) {
        super(parent, invokingState);
        this.parser = parser;
    }
    public IPSUM(): antlr.TerminalNode {
        return this.getToken(WhiteboxParser.IPSUM, 0);
    }
    public override get ruleIndex(): number {
        return WhiteboxParser.RULE_rule4;
    }
}


export class Rule5Context extends antlr.ParserRuleContext {
    constructor(parser?: WhiteboxParser, parent?: antlr.ParserRuleContext, invokingState?: number) {
        super(parent, invokingState);
        this.parser = parser;
    }
    public override get ruleIndex(): number {
        return WhiteboxParser.RULE_rule5;
    }
}


export class Test2Context extends antlr.ParserRuleContext {
    constructor(parser?: WhiteboxParser, parent?: antlr.ParserRuleContext, invokingState?: number) {
        super(parent, invokingState);
        this.parser = parser;
    }
    public rule7(): Rule7Context {
        return this.getTypedRuleContext(Rule7Context, 0);
    }
    public ADIPISCING(): antlr.TerminalNode {
        return this.getToken(WhiteboxParser.ADIPISCING, 0);
    }
    public override get ruleIndex(): number {
        return WhiteboxParser.RULE_test2;
    }
}


export class Rule7Context extends antlr.ParserRuleContext {
    constructor(parser?: WhiteboxParser, parent?: antlr.ParserRuleContext, invokingState?: number) {
        super(parent, invokingState);
        this.parser = parser;
    }
    public rule8(): Rule8Context {
        return this.getTypedRuleContext(Rule8Context, 0);
    }
    public CONSECTETUR(): antlr.TerminalNode {
        return this.getToken(WhiteboxParser.CONSECTETUR, 0);
    }
    public override get ruleIndex(): number {
        return WhiteboxParser.RULE_rule7;
    }
}


export class Rule8Context extends antlr.ParserRuleContext {
    constructor(parser?: WhiteboxParser, parent?: antlr.ParserRuleContext, invokingState?: number) {
        super(parent, invokingState);
        this.parser = parser;
    }
    public LOREM(): antlr.TerminalNode {
        return this.getToken(WhiteboxParser.LOREM, 0);
    }
    public rule11(): Rule11Context {
        return this.getTypedRuleContext(Rule11Context, 0);
    }
    public rule9(): Rule9Context {
        return this.getTypedRuleContext(Rule9Context, 0);
    }
    public SIT__list(): antlr.TerminalNode[] {
        return this.getTokens(WhiteboxParser.SIT);
    }
    public SIT(i: number): antlr.TerminalNode {
        return this.getToken(WhiteboxParser.SIT, i);
    }
    public AMET(): antlr.TerminalNode {
        return this.getToken(WhiteboxParser.AMET, 0);
    }
    public override get ruleIndex(): number {
        return WhiteboxParser.RULE_rule8;
    }
}
